<resources>
    <string name="app_name">Home Assistant Technical</string>
    <string name="title_login">Home Assistant</string>
    <string name="subtitle_login">Technical</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo eletrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="action_sign_up">Regístrate Ahora</string>
    <string name="error_invalid_email">El correo electrónico es invalido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_credencials">No pudimos verificar tus credenciales (correo electrónico y/o contraseña)</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Se necesitan permisos de contactos para proporcionar correo electrónico"
    </string>
</resources>
