<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/default_vertical_margin"
    android:paddingLeft="@dimen/default_horizontal_margin"
    android:paddingRight="@dimen/default_horizontal_margin"
    android:paddingTop="@dimen/default_vertical_margin"
    android:id="@+id/login_form"
    android:background="@color/colorPrimary"
    tools:context="pe.edu.upc.homeassistanttechnical.activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/pictureLogoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/app_logo"/>

    <TextView
        android:id="@+id/titleLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/pictureLogoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorText"
        android:textSize="@dimen/material_design_text_headline"
        android:textAlignment="center"
        android:text="@string/title_login"/>

    <TextView
        android:id="@+id/subtitleLoginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/titleLoginTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorText"
        android:textSize="@dimen/material_design_text_subheadline"
        android:textAlignment="center"
        android:text="@string/subtitle_login"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/subtitleLoginTextView"
        android:orientation="vertical"
        android:textColorHint="@color/colorText">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="@color/colorText"
            android:textSize="@dimen/material_design_text_body1"
            android:theme="@style/EditText"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
        android:orientation="vertical"
        android:textColorHint="@color/colorText">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/colorText"
            android:textSize="@dimen/material_design_text_body1"
            android:theme="@style/EditText"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signInButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_horizontal_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout"
        android:background="@color/colorButton"
        android:text="@string/action_sign_in"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:textSize="@dimen/material_design_text_button"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:textSize="@dimen/material_design_text_button"
        android:textAlignment="textEnd"
        android:text="@string/action_forgot_password"/>

    <Button
        android:id="@+id/signUpButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorButton"
        android:text="@string/action_sign_up"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:textSize="@dimen/material_design_text_button"
        android:textAllCaps="true"/>
</android.support.constraint.ConstraintLayout>
